--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Proyecto Base</h1>
-</body>
+  </head>
+  <body>
+    <h1>Menu responsive</h1>
+    <button id="button menu">MENU</button>
+    <nav>
+      <ul id="menu" class="menu">
+        <li class="menu__item">
+          <a href="#" class="menu__link">Item 1</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Item 2</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Item 3</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Item 4</a>
+        </li>
+      </ul>
+    </nav>
+    <script src="./js/scripts.js"></script>
+  </body>
 </html>
