--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Menu responsive</h1>
-    <button id="button menu">MENU</button>
+    <button id="button-menu">MENU</button>
     <nav>
       <ul id="menu" class="menu">
         <li class="menu__item">
